--- a/css/my.css
+++ b/css/my.css
@@ -2,3 +2,15 @@
     width: 100%;
     height: 100%;
 }
+
+#to-top {
+	visibility: hidden;
+	opacity: 0;
+	transition: visibility 0s, opacity 0.5s linear;
+    display: block;
+}
+
+#to-top.show {
+	visibility: visible;
+	opacity: 1;
+}
