--- a/css/my.css
+++ b/css/my.css
@@ -39,11 +39,11 @@
     overflow: hidden;
     transition: max-height 0.1s ease-out;
 }
-
+/*
 .portfolio-item:hover {
     max-height: 500px;
     transition: max-height 0.3s ease-in;
-}
+}*/
 
 .div-work {
     border-top: 1px solid #ddd;
