--- a/css/my.css
+++ b/css/my.css
@@ -1,5 +1,5 @@
 .header {
-    color:#0d0101;
+    color: #0d0101;
 }
 
 #app {
@@ -26,7 +26,9 @@
 .portfolio-list .div-work:nth-of-type(1),
 .portfolio-list .div-work:nth-of-type(2),
 .portfolio-list .div-work:nth-of-type(3),
-.portfolio-list .div-work:nth-of-type(4) {
+.portfolio-list .div-work:nth-of-type(4),
+.portfolio-list .div-work:nth-of-type(5),
+.portfolio-list .div-work:nth-of-type(6) {
     display: block;
 }
 
@@ -39,6 +41,12 @@
     overflow: hidden;
     transition: max-height 0.1s ease-out;
 }
+
+a.dead {
+    text-decoration: line-through;
+}
+
+
 /*
 .portfolio-item:hover {
     max-height: 500px;
@@ -102,4 +110,8 @@
 
 .codeigniter {
     background: #380101;
+}
+
+.twig {
+    background: #bacf29;
 }
